# contextgraph

./: .gitignore  Cargo.toml  Makefile  README.md
benchmark_results/: BENCHMARK_SUMMARY.md  causal_benchmark.json  causal_benchmark_enhanced.json  causal_benchmark_large.json  e11_entity.json  e1_semantic.json  e1_semantic_arxiv.json  e1_semantic_final.json  e1_semantic_realdata.json  e1_semantic_scifact_beir.json  e6_sparse_benchmark.json  e6_sparse_benchmark_report.md  e6_upgrade_analysis.md  graph_benchmark.json  graph_code_benchmark.json  graph_code_benchmark_detailed.json  graph_multi_domain_benchmark.json  graph_multi_domain_detailed.json  unified_realdata.json  unified_realdata_report.md
crates/context-graph-test-utils/: Cargo.toml
crates/context-graph-test-utils/src/: fingerprints.rs  lib.rs
docs/: ATOMIC_TASKS_PRD_GAPS.md  CAPABILITY_REPORT.md  CODE_SIMPLIFICATION_ANALYSIS.md  CONTEXT_GRAPH_CLAUDE_CODE_INTEGRATION_REPORT.md  E5_CAUSAL_EMBEDDER_DEEP_DIVE.md  E5_CAUSAL_FORENSIC_FINDINGS.md  E5_CAUSAL_SYSTEM_INTEGRATION_REPORT.md  EMBEDDER_NAVIGATION_GAPS.md  EMBEDDER_REPORT.md  FUNC_SPEC_PRD_GAPS.md  HIDDEN_BROKENNESS_AUDIT.md  HOOK_SKILL_VERIFICATION_REPORT.md  KNOWLEDGE_GRAPH_ARCHITECTURE.md  KNOWLEDGE_GRAPH_LINKING_ENHANCEMENTS.md  LEGAL_EMBEDDERS_RESEARCH_REPORT.md  MCP_FULL_SYSTEM_VERIFICATION_PLAN.md  MEMORY_AUDIT_REPORT.md  MEMORY_SYSTEM_INTEGRATION_REPORT.md  MULTI_WEIGHT_SEARCH_REPORT.md  PRD_GAP_ANALYSIS.md  SHERLOCK-MASTER-REPORT.md  SYSTEM_ANALYSIS_AND_OPTIMIZATION_REPORT.md  TECH_SPEC_PRD_GAPS.md  VALIDATION_BENCHMARK_REPORT.md  e11design.md  (+28 more)
(+1372 files in other folders)
