[package]
name = "context-graph-test-utils"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Shared test utilities for context-graph workspace — NO MOCK DATA"

[dependencies]
# Core types (SemanticFingerprint, TeleologicalFingerprint, SparseVector)
context-graph-core = { path = "../context-graph-core" }

# Storage (RocksDbTeleologicalStore)
context-graph-storage = { path = "../context-graph-storage" }

# Data generation
rand = { workspace = true }

# Temp directories for RocksDB
tempfile = "3"

# UUIDs for fingerprint IDs
uuid = { workspace = true }
